lang.java.statics.test/tests/positive/packages/single-type-import-from-toplevel-package.yes.javtest
STATIX ok
JAVAC  ok

[p] {

    [A]
    package p;
    import q.B;
    public class A {
        public B b;
    }

}

[q] {

    [B]
    package q;
    public class B {}

    [C]
    package q;
    public class C {}

}
