lang.java.statics.test/tests/negative/packages/single-file-import-not-visible-in-other-compilation-units-of-same-package.no.javtest
STATIX fail java\.names\.lexical-type-name.*\"C\"
JAVAC  fail cannot find symbol

[p] {

    [A]
    package p;
    import q.C;
    public class A {}

    [B]
    package p;
    public class B {
        public C c;
    }

}

[q] {

    [C]
    package q;
    public class C {}

}
